--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+  padding: 0; }
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -12,3 +16,10 @@ input[type="radio"].visually-hidden {
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden; }
+
+.main-header {
+  background-color: #101528;
+  background-image: url("../img/main-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white; }
