--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,8 @@
 @import "variables";
 @import "fonts";
 @import "general";
-@import "blocks/visually-hidden";
 @import "main";
+@import "blocks/visually-hidden";
+@import "blocks/wrap.scss";
+@import "blocks/block.scss";
 @import "blocks/main-header.scss";
