add css for block header

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,6 @@
 @import "blocks/wrap.scss";
 @import "blocks/block.scss";
 @import "blocks/main-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/header-contacs.scss";
+@import "blocks/header-socials.scss";
