--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,38 @@
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  font-display: swap;
+  src: url("../fonts/Roboto-Light.ttf") format("ttf");
+  font-style: normal;
+  font-weight: 300; }
+
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  font-display: swap;
+  src: url("../fonts/Roboto-Regular.ttf") format("ttf");
+  font-style: normal;
+  font-weight: 400; }
+
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  font-display: swap;
+  src: url("../fonts/Roboto-Bold.ttf") format("ttf");
+  font-style: normal;
+  font-weight: 700; }
+
+@font-face {
+  font-family: 'Montserrat', sans-serif;
+  font-display: swap;
+  src: url("../fonts/Montserrat-Bold.ttf") format("ttf");
+  font-style: normal;
+  font-weight: 700; }
+
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400; }
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
@@ -26,10 +58,131 @@ input[type="radio"].visually-hidden {
   color: #C5C5C5; }
 
 .main-header {
-  min-height: 960px;
+  min-height: 100vh;
   background-color: #101528;
   background-image: url("../img/main-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: bottom;
-  color: white; }
+  color: #ffffff; }
+  .main-header__nav {
+    margin: 0;
+    margin-bottom: 215px;
+    padding-top: 65px; }
+  .main-header__content {
+    text-align: center; }
+  .main-header__name {
+    margin: 0;
+    margin-bottom: 5px;
+    font-size: 28px;
+    line-height: 35px;
+    font-weight: 300;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); }
+  .main-header__desc {
+    margin: 0;
+    margin-bottom: 15px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 44px;
+    line-height: 50px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); }
+  .main-header__socials {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .main-nav__wrap {
+    display: flex; }
+  .main-nav__toggle {
+    position: relative;
+    margin-right: 20px;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background: none;
+    cursor: pointer; }
+    .main-nav__toggle::before {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 30px;
+      height: 1px;
+      top: 50%;
+      transform: translateY(10px);
+      background: #ffffff;
+      transition: 0.3s; }
+    .main-nav__toggle::after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 30px;
+      height: 1px;
+      top: 50%;
+      transform: translateY(-10px);
+      background: #ffffff;
+      transition: 0.3s; }
+    .main-nav__toggle--open::before {
+      transform: rotate(45deg);
+      box-shadow: 0 -10px 0 transparent; }
+    .main-nav__toggle--open::after {
+      transform: rotate(-45deg); }
+    .main-nav__toggle--closed::before {
+      box-shadow: 0 -10px 0 #ffffff; }
+  .main-nav__list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    list-style: none; }
+  .main-nav__item {
+    margin: 0;
+    margin-right: 20px;
+    text-align: center; }
+  .main-nav__link {
+    text-decoration: none;
+    color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); }
+    .main-nav__link:hover {
+      text-decoration: underline; }
+
+.header-contacs {
+  display: flex;
+  flex-direction: column;
+  text-align: right; }
+  .header-contacs__link {
+    text-decoration: none;
+    color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); }
+    .header-contacs__link:hover {
+      text-decoration: underline; }
+
+.header-socials {
+  display: flex;
+  justify-content: center; }
+  .header-socials__item {
+    margin: 0;
+    margin-right: 36px; }
+    .header-socials__item:last-child {
+      margin-right: 0; }
+  .header-socials__link {
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-position: center;
+    background-repeat: no-repeat; }
+    .header-socials__link--instagram {
+      background-image: url("../img/social-instagram.svg"); }
+    .header-socials__link--facebook {
+      background-image: url("../img/social-facebook.svg"); }
+    .header-socials__link--vk {
+      background-image: url("../img/social-vk.svg"); }
+    .header-socials__link--github {
+      background-image: url("../img/social-github.svg"); }
+    .header-socials__link:hover {
+      opacity: .5; }
