--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,10 +1,51 @@
 .main-header {
-    min-height: 960px;
+    min-height: 100vh;
 
     background-color: #101528;
     background-image: url('../img/main-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: bottom;
-    color:white;
+    color: $text-white;
+
+    &__nav {
+      margin: 0;
+      margin-bottom: 215px;
+      padding-top: 65px;
+    }
+
+    &__content {
+      text-align: center;
+    }
+
+    &__name {
+      margin: 0;
+      margin-bottom: 5px;
+
+      font-size: 28px;
+      line-height: 35px;
+      font-weight: 300;
+
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    &__desc {
+      margin: 0;
+      margin-bottom: 15px;
+
+      font-family: 'Montserrat', sans-serif;
+      font-size: 44px;
+      line-height: 50px;
+      font-weight: 700;
+      text-transform: uppercase;
+
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    &__socials {
+      margin: 0;
+      padding: 0;
+
+      list-style: none;
+    }
 }
