--- a/source/sass/general.scss
+++ b/source/sass/general.scss
@@ -1,4 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
 }
