--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -54,8 +54,54 @@ input[type="radio"].visually-hidden {
   max-width: 1040px; }
 
 .block {
+  margin: 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
   background-color: #000000;
   color: #C5C5C5; }
+  .block__title {
+    margin: 0;
+    margin-bottom: 50px;
+    padding: 0;
+    font-size: 28px;
+    line-height: 36px;
+    letter-spacing: 0.2em;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase; }
+  .block__text {
+    margin: 0 auto;
+    padding: 0;
+    width: 50%; }
+  .block--light {
+    background-color: #E0E0E0;
+    color: #383838; }
+  .block--skew-bottom {
+    padding-bottom: 0; }
+    .block--skew-bottom::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100px;
+      -webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
+              clip-path: polygon(0 0, 0% 100%, 100% 100%);
+      background-color: #E0E0E0; }
+      @media (min-width: 0\0) {
+        .block--skew-bottom::after {
+          background-color: #000000; } }
+  .block--skew-top {
+    padding-top: 0; }
+    .block--skew-top::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100px;
+      -webkit-clip-path: polygon(0 100%, 0 0, 100% 0);
+              clip-path: polygon(0 100%, 0 0, 100% 0);
+      background-color: #E0E0E0; }
+      @media (min-width: 0\0) {
+        .block--skew-top::before {
+          background-color: #000000; } }
 
 .main-header {
   min-height: 100vh;
