--- a/source/sass/blocks/block.scss
+++ b/source/sass/blocks/block.scss
@@ -1,4 +1,67 @@
 .block {
+  margin: 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
   background-color: $bg-dark;
   color: $text-ligth;
+
+  &__title {
+    margin: 0;
+    margin-bottom: 50px;
+    padding: 0;
+    font-size: 28px;
+    line-height: 36px;
+    letter-spacing: 0.2em;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  &__text {
+    margin: 0 auto;
+    padding: 0;
+    width: 50%;
+  }
+
+  &--light {
+    background-color: $bg-ligth;
+    color: $text-dark;
+  }
+
+  &--skew-bottom {
+    padding-bottom: 0;
+
+    &::after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100px;
+      clip-path: polygon(0 0, 0% 100%, 100% 100%);
+  
+      background-color: $bg-ligth;
+  
+      @media (min-width:0\0) {
+        background-color: $bg-dark;
+      }
+    }
+  }
+
+  &--skew-top {
+    padding-top: 0;
+
+    &::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100px;
+      clip-path: polygon(0 100%, 0 0, 100% 0);
+  
+      background-color: $bg-ligth;
+  
+      @media (min-width:0\0) {
+        background-color: $bg-dark;
+      }
+    }
+  }
 }
