corect css block

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,6 @@
 @import "blocks/main-nav.scss";
 @import "blocks/header-contacs.scss";
 @import "blocks/header-socials.scss";
+@import "blocks/about-me.scss";
+@import "blocks/works.scss";
+@import "blocks/skils.scss";
