--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -76,32 +76,6 @@ input[type="radio"].visually-hidden {
   .block--light {
     background-color: #E0E0E0;
     color: #383838; }
-  .block--skew-bottom {
-    padding-bottom: 0; }
-    .block--skew-bottom::after {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 100px;
-      -webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
-              clip-path: polygon(0 0, 0% 100%, 100% 100%);
-      background-color: #E0E0E0; }
-      @media (min-width: 0\0) {
-        .block--skew-bottom::after {
-          background-color: #000000; } }
-  .block--skew-top {
-    padding-top: 0; }
-    .block--skew-top::before {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 100px;
-      -webkit-clip-path: polygon(0 100%, 0 0, 100% 0);
-              clip-path: polygon(0 100%, 0 0, 100% 0);
-      background-color: #E0E0E0; }
-      @media (min-width: 0\0) {
-        .block--skew-top::before {
-          background-color: #000000; } }
 
 .main-header {
   min-height: 100vh;
@@ -232,3 +206,33 @@ input[type="radio"].visually-hidden {
       background-image: url("../img/social-github.svg"); }
     .header-socials__link:hover {
       opacity: .5; }
+
+.about-me {
+  padding-bottom: 0; }
+
+.works {
+  padding-top: 0;
+  padding-bottom: 0; }
+  .works::before {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 100px solid #000000;
+    border-right: 50vw solid #000000;
+    border-bottom: 100px solid transparent;
+    border-left: 50vw solid transparent;
+    background-color: #E0E0E0; }
+  .works::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-top: 100px solid transparent;
+    border-right: 50vw solid #000000;
+    border-bottom: 100px solid #000000;
+    border-left: 50vw solid transparent;
+    background-color: #E0E0E0; }
+
+.skils {
+  padding-top: 0; }
