--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "general";
 @import "main";
 @import "blocks/visually-hidden";
+@import "blocks/main-page";
 @import "blocks/wrap.scss";
 @import "blocks/block.scss";
 @import "blocks/main-header.scss";
@@ -11,4 +12,5 @@
 @import "blocks/header-socials.scss";
 @import "blocks/about-me.scss";
 @import "blocks/works.scss";
+@import "blocks/work.scss";
 @import "blocks/skils.scss";
