--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -34,6 +34,13 @@ body {
   line-height: 22px;
   font-weight: 400; }
 
+*, *::after, *::before {
+  box-sizing: border-box; }
+
+img {
+  width: 100%;
+  height: auto; }
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
@@ -47,6 +54,9 @@ input[type="radio"].visually-hidden {
   -webkit-clip-path: inset(100%);
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
+  overflow: hidden; }
+
+.main-page {
   overflow: hidden; }
 
 .wrap {
@@ -208,7 +218,39 @@ input[type="radio"].visually-hidden {
       opacity: .5; }
 
 .about-me {
+  position: relative;
   padding-bottom: 0; }
+  .about-me::after {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 512px;
+    height: 300px;
+    top: 200px;
+    left: 75%;
+    transform: rotate(30deg);
+    background-image: url("../img/laptop.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: transparent;
+    -webkit-animation: laptop 10s ease-in-out infinite;
+            animation: laptop 10s ease-in-out infinite; }
+
+@-webkit-keyframes laptop {
+  0% {
+    transform: translateY(0) rotate(30deg); }
+  50% {
+    transform: translateY(20px) rotate(32deg); }
+  100% {
+    transform: translateY(0) rotate(30deg); } }
+
+@keyframes laptop {
+  0% {
+    transform: translateY(0) rotate(30deg); }
+  50% {
+    transform: translateY(20px) rotate(32deg); }
+  100% {
+    transform: translateY(0) rotate(30deg); } }
 
 .works {
   padding-top: 0;
@@ -233,6 +275,64 @@ input[type="radio"].visually-hidden {
     border-bottom: 100px solid #000000;
     border-left: 50vw solid transparent;
     background-color: #E0E0E0; }
+  .works__list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none; }
+  .works__item {
+    margin-bottom: 50px;
+    width: 30%;
+    height: 380px; }
+
+.work__link {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%; }
+  .work__link:hover .work__info {
+    opacity: 1; }
+
+.work__info {
+  position: absolute;
+  display: flex;
+  padding: 40px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  outline: 1px solid #ffffff;
+  outline-offset: -20px;
+  opacity: 0;
+  transition: 0.3s; }
+
+.work__title {
+  margin: 0;
+  margin-bottom: 18px;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 28px;
+  line-height: 28px;
+  font-weight: 300;
+  text-align: center; }
+
+.work__desc {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 300;
+  text-align: center; }
 
 .skils {
   padding-top: 0; }
