--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -61,7 +61,9 @@ input[type="radio"].visually-hidden {
 
 .wrap {
   margin: 0 auto;
-  max-width: 1040px; }
+  padding-right: 50px;
+  padding-left: 50px;
+  max-width: 1140px; }
 
 .block {
   margin: 0;
@@ -117,10 +119,6 @@ input[type="radio"].visually-hidden {
     font-weight: 700;
     text-transform: uppercase;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); }
-  .main-header__socials {
-    margin: 0;
-    padding: 0;
-    list-style: none; }
 
 .main-nav {
   display: flex;
@@ -137,39 +135,35 @@ input[type="radio"].visually-hidden {
     border: none;
     background: none;
     cursor: pointer; }
+    .main-nav__toggle::before, .main-nav__toggle::after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 30px;
+      height: 1px;
+      top: 50%;
+      background: #ffffff;
+      transition: transform 0.3s; }
     .main-nav__toggle::before {
-      position: absolute;
-      content: '';
-      display: block;
-      width: 30px;
-      height: 1px;
-      top: 50%;
-      transform: translateY(10px);
-      background: #ffffff;
-      transition: 0.3s; }
-    .main-nav__toggle::after {
-      position: absolute;
-      content: '';
-      display: block;
-      width: 30px;
-      height: 1px;
-      top: 50%;
-      transform: translateY(-10px);
-      background: #ffffff;
-      transition: 0.3s; }
-    .main-nav__toggle--open::before {
       transform: rotate(45deg);
       box-shadow: 0 -10px 0 transparent; }
-    .main-nav__toggle--open::after {
+    .main-nav__toggle::after {
       transform: rotate(-45deg); }
+    .main-nav__toggle--closed ~ .main-nav__list {
+      display: none; }
     .main-nav__toggle--closed::before {
-      box-shadow: 0 -10px 0 #ffffff; }
+      box-shadow: 0 -10px 0 #ffffff;
+      transform: translateY(10px); }
+    .main-nav__toggle--closed::after {
+      transform: translateY(-10px); }
   .main-nav__list {
     display: flex;
     margin: 0;
     padding: 0;
     align-items: center;
     list-style: none; }
+    .main-nav__list--closed {
+      display: none; }
   .main-nav__item {
     margin: 0;
     margin-right: 20px;
@@ -181,40 +175,43 @@ input[type="radio"].visually-hidden {
     .main-nav__link:hover {
       text-decoration: underline; }
 
-.header-contacs {
+.contacs {
   display: flex;
   flex-direction: column;
   text-align: right; }
-  .header-contacs__link {
+  .contacs__link {
     text-decoration: none;
     color: #ffffff;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); }
-    .header-contacs__link:hover {
+    .contacs__link:hover {
       text-decoration: underline; }
 
-.header-socials {
+.socials {
   display: flex;
+  margin: 0;
+  padding: 0;
   justify-content: center; }
-  .header-socials__item {
+  .socials__item {
     margin: 0;
-    margin-right: 36px; }
-    .header-socials__item:last-child {
+    margin-right: 36px;
+    list-style: none; }
+    .socials__item:last-child {
       margin-right: 0; }
-  .header-socials__link {
+  .socials__link {
     display: block;
     width: 50px;
     height: 50px;
     background-position: center;
     background-repeat: no-repeat; }
-    .header-socials__link--instagram {
+    .socials__link--instagram {
       background-image: url("../img/social-instagram.svg"); }
-    .header-socials__link--facebook {
+    .socials__link--facebook {
       background-image: url("../img/social-facebook.svg"); }
-    .header-socials__link--vk {
+    .socials__link--vk {
       background-image: url("../img/social-vk.svg"); }
-    .header-socials__link--github {
+    .socials__link--github {
       background-image: url("../img/social-github.svg"); }
-    .header-socials__link:hover {
+    .socials__link:hover {
       opacity: .5; }
 
 .about-me {
@@ -285,7 +282,8 @@ input[type="radio"].visually-hidden {
   .works__item {
     margin-bottom: 50px;
     width: 30%;
-    height: 380px; }
+    max-height: 380px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); }
 
 .work__link {
   position: relative;
@@ -336,3 +334,18 @@ input[type="radio"].visually-hidden {
 
 .skils {
   padding-top: 0; }
+
+.main-footer__wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; }
+
+.main-footer__socials {
+  margin-bottom: 13px; }
+
+.main-footer__contacs {
+  text-align: center; }
+
+.no-js {
+  display: none; }
