--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -1,10 +1,14 @@
-.header-socials {
+.socials {
   display: flex;
+  margin: 0;
+  padding: 0;
   justify-content: center;
 
   &__item {
     margin: 0;
     margin-right: 36px;
+
+    list-style: none;
 
     &:last-child {
       margin-right: 0;
