--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,9 +8,11 @@
 @import "blocks/block.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
-@import "blocks/header-contacs.scss";
-@import "blocks/header-socials.scss";
+@import "blocks/contacs.scss";
+@import "blocks/socials.scss";
 @import "blocks/about-me.scss";
 @import "blocks/works.scss";
 @import "blocks/work.scss";
 @import "blocks/skils.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/no-js.scss";
